2002-10-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/Makefile.am: Work around for CYGWIN.
	* server-src/Makefile.am: Ditto.

2002-10-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: Remove empty command from $program_transform_name.

2002-10-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (READ_TIMEOUT): Increased to 240*60.

2002-09-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

        * client-src/getfsent.c (open_fstab): Check if MNTTAB is defined.

2002-09-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverifyrun.sh.in: New program.
	* man/amverifyrun.8.in: Man page for amverifyrun.
	* configure.in (AC_OUTPUT): add man/amverifyrun.8 and
	  server-src/amverifyrun.sh.
	* man/Makefile.am (SERVER_MAN_PAGES): Add amverifyrun.8.
	* man/amanda.8.in: Add amdd, ammt and amverifyrun in SEE ALSO.
	* man/amverify.8.in: Add amverifyrun(8) in SEE ALSO.
	* server-src/Makefile.am (sbin_SCRIPTS): Add amverifyrun.

2002-09-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amverify.sh.in: Accept runtapes as a third argument.
	* man/amverify.8.in: Document it.

2002-09-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/missing: Updated from automake-1.5.

2002-09-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* config/config.guess: Updated from ftp://ftp.gnu.org/gnu/config/
	* config/config.sub: Updated from ftp://ftp.gnu.org/gnu/config/

2002-09-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendsize.c (getsize_dump): Print the fstype.
	* client-src/sendbackup-dump.c (start_backup): Print the fstype.

2002-09-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by  Florian Hars <hars@bik-gmbh.de>

	* changer-src/chg-zd-mtx.sh.in: Fix default value for cleancycle.

2002-09-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (extract_files): print tape drive