@@ -1,3 +1,11 @@
+2002-10-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/amindexd.c: New FEATURES command that read the features
+	  set from the client and reply the features set of the server.
+	* recover-src/amrecover.h: include "amfeatures.h"
+	* recover-src/amrecover.c: Send the FEATURES command to the server
+	  and read it's features set.
+
 2002-10-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* client-src/Makefile.am: Work around for CYGWIN.
